# resourced

./: .gitignore  CMakeLists.txt
config/: org.maemo.resource.manager.conf  resourced.conf
src/: CMakeLists.txt  main.cpp
src/core/: resourceclient.cpp  resourceclient.h  resourcemanager.cpp  resourcemanager.h  resourcetypes.h
src/dbus/: clientadaptor.cpp  clientadaptor.h  manageradaptor.cpp  manageradaptor.h
src/policy/: prioritypolicy.cpp  prioritypolicy.h  securitypolicy.cpp  securitypolicy.h
src/util/: logger.cpp  logger.h
src/xml/: org.maemo.resource.client.xml  org.maemo.resource.manager.xml
systemd/: resourced.service
